--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Ogun6ele</a>.
+      >. Coded by
+      <a href="https://github.com/Ogun6ele/-QR-code_scanner">Ogun6ele</a>.
     </div>
   </body>
 </html>
