--- a/index.html
+++ b/index.html
@@ -27,31 +27,35 @@
     </style>
   </head>
   <body>
-    <div class="w_container">
-      <div class="img_container">
-        <img src="images/image-qr-code.png" alt="qr-img" />
+    <main class="w_container">
+      <div class="white">
+        <div class="img_container">
+          <img
+            src="images/image-qr-code.png"
+            alt="A qr code to visit frontendmentor.io website"
+          />
+        </div>
+        <div class="text_container">
+          <h1 class="bold">
+            Improve your front-end skills by building projects
+          </h1>
+          <p class="sub">
+            Scan the QR-code to visit Frontend Mentor and take your coding
+            skills to the next level
+          </p>
+        </div>
       </div>
-      <div class="text_container">
-        <h3 class="bold">
-          Improve your front-end <br />skills by building projects
-        </h3>
-        <p class="sub">
-          Scan the QR-code to visit Frontend <br />Mentor and take your coding
-          skills to <br />the next level
-        </p>
-      </div>
-    </div>
+    </main>
 
     <!-- Improve your front-end skills by building projects
 
   Scan the QR code to visit Frontend Mentor and take your coding skills to the next level -->
 
-    <div class="attribution">
+    <footer class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by
-      <a href="https://github.com/Ogun6ele/-QR-code_scanner">Ogun6ele</a>.
-    </div>
+      >. Coded by <a href="https://github.com/Ogun6ele">Ogun6ele</a>.
+    </footer>
   </body>
 </html>
